@@ -17,9 +17,16 @@
 
 package org.apache.ignite.cli;
 
+import static com.github.npathai.hamcrestopt.OptionalMatchers.isPresentAnd;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.stream.Collectors.toList;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.startsWith;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -30,15 +37,19 @@ import io.micronaut.context.env.Environment;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublisher;
 import java.net.http.HttpResponse;
+import java.nio.ByteBuffer;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.stream.Collectors;
+import java.util.List;
 import org.apache.ignite.cli.builtins.init.InitIgniteCommand;
 import org.apache.ignite.cli.builtins.module.ModuleManager;
 import org.apache.ignite.cli.builtins.module.ModuleRegistry;
@@ -46,15 +57,17 @@ import org.apache.ignite.cli.builtins.module.StandardModuleDefinition;
 import org.apache.ignite.cli.builtins.node.NodeManager;
 import org.apache.ignite.cli.spec.IgniteCliSpec;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import picocli.CommandLine;
+import reactor.adapter.JdkFlowAdapter;
 
 /**
  * Smoke test for Ignite CLI features and its UI. Structure of tests should be self-documented and repeat the structure of Ignite CLI
@@ -83,6 +96,9 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             Path.of("config"),
             Path.of("log"),
             "version");
+
+    @Captor
+    private ArgumentCaptor<HttpRequest> requestCaptor;
 
     /**
      * Sets up environment before test execution.
@@ -133,7 +149,7 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
 
             CommandLine cli = cmd(ctx);
 
-            Assertions.assertEquals(0, cli.execute("init"));
+            assertEquals(0, cli.execute("init"));
             verify(initIgniteCmd).init(any(), any(), any());
         }
     }
@@ -163,30 +179,30 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
         void add() {
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError()).thenReturn(ignitePaths);
 
-            var exitCode =
+            int exitCode =
                     cmd(ctx).execute("module add mvn:groupId:artifactId:version".split(" "));
 
             verify(moduleMgr).addModule("mvn:groupId:artifactId:version", ignitePaths, Collections.emptyList());
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
         }
 
         @Test
-        @DisplayName("add mvn:groupId:artifact:version --repo http://mvnrepo.com/repostiory")
+        @DisplayName("add mvn:groupId:artifact:version --repo http://mvnrepo.com/repostiory --repo http://anotherrepo.com/repostiory")
         void addWithCustomRepo() throws MalformedURLException {
             doNothing().when(moduleMgr).addModule(any(), any(), any());
 
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError()).thenReturn(ignitePaths);
 
-            var exitCode =
-                    cmd(ctx)
-                            .execute(
-                                    "module add mvn:groupId:artifactId:version --repo http://mvnrepo.com/repostiory".split(" "));
+            int exitCode = cmd(ctx)
+                    .execute(
+                            ("module add mvn:groupId:artifactId:version --repo http://mvnrepo.com/repostiory "
+                                    + "--repo http://anotherrepo.com/repostiory").split(" "));
 
             verify(moduleMgr).addModule(
                     "mvn:groupId:artifactId:version",
                     ignitePaths,
-                    Collections.singletonList(new URL("http://mvnrepo.com/repostiory")));
-            Assertions.assertEquals(0, exitCode);
+                    List.of(new URL("http://mvnrepo.com/repostiory"), new URL("http://anotherrepo.com/repostiory")));
+            assertThatExitCodeMeansSuccess(exitCode);
         }
 
         @Test
@@ -196,28 +212,29 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
 
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError()).thenReturn(ignitePaths);
 
-            var exitCode =
+            int exitCode =
                     cmd(ctx).execute("module add test-module".split(" "));
 
             verify(moduleMgr).addModule("test-module", ignitePaths, Collections.emptyList());
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
         }
 
         @Test
         @DisplayName("remove builtin-module")
-        void remove() {
+        void remove() throws UnsupportedEncodingException {
             var moduleName = "builtin-module";
 
             when(moduleMgr.removeModule(moduleName)).thenReturn(true);
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute("module remove builtin-module".split(" "));
 
             verify(moduleMgr).removeModule(moduleName);
-            Assertions.assertEquals(0, exitCode);
-            assertEquals("Module " + cmd.getColorScheme().parameterText(moduleName)
-                    + " was removed successfully.\n", out.toString());
+            assertThatExitCodeMeansSuccess(exitCode);
+            assertOutputEqual("Module " + cmd.getColorScheme().parameterText(moduleName)
+                    + " was removed successfully.\n", out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -227,14 +244,15 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
 
             when(moduleMgr.removeModule(moduleName)).thenReturn(false);
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd(ctx).execute("module remove unknown-module".split(" "));
 
             verify(moduleMgr).removeModule(moduleName);
-            Assertions.assertEquals(0, exitCode);
-            assertEquals("Nothing to do: module " + cmd.getColorScheme().parameterText(moduleName)
-                    + " is not yet added.\n", out.toString());
+            assertThatExitCodeMeansSuccess(exitCode);
+            assertOutputEqual("Nothing to do: module " + cmd.getColorScheme().parameterText(moduleName)
+                    + " is not yet added.\n", out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -269,14 +287,14 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
                                             Collections.emptyList(),
                                             ModuleRegistry.SourceType.Standard, ""), externalModule)));
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute("module list".split(" "));
 
             verify(moduleMgr).builtinModules();
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
 
-            var expOutput = cmd.getColorScheme().text("@|bold Optional Ignite Modules|@\n"
+            String expOutput = cmd.getColorScheme().text("@|bold Optional Ignite Modules|@\n"
                     + "+---------+--------------+------------+\n"
                     + "| @|bold Name|@    | @|bold Description|@  | @|bold Installed?|@ |\n"
                     + "+---------+--------------+------------+\n"
@@ -294,7 +312,8 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
                     + cmd.getColorScheme().parameterText("<groupId>:<artifactId>:<version>")
                     + " to remove a dependency.\n"
             ).toString();
-            assertEquals(expOutput, out.toString());
+            assertOutputEqual(expOutput, out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
     }
 
@@ -329,9 +348,9 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
 
             CommandLine cli = cmd(ctx);
 
-            var exitCode = cli.execute(("node start " + nodeName + " --config conf.json").split(" "));
+            int exitCode = cli.execute(("node start " + nodeName + " --config conf.json").split(" "));
 
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
 
             verify(nodeMgr).start(
                     nodeName,
@@ -342,7 +361,7 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
                     ignitePaths.serverJavaUtilLoggingPros(),
                     cli.getOut());
 
-            assertEquals("\nNode is successfully started. To stop, type ignite node stop " + nodeName + "\n\n"
+            assertOutputEqual("\nNode is successfully started. To stop, type ignite node stop " + nodeName + "\n\n"
                             + "+-----------+---------+\n"
                             + "| Node name | node1   |\n"
                             + "+-----------+---------+\n"
@@ -350,7 +369,8 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
                             + "+-----------+---------+\n"
                             + "| Log File  | logfile |\n"
                             + "+-----------+---------+\n",
-                    out.toString());
+                    out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -364,17 +384,18 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError())
                     .thenReturn(ignitePaths);
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute(("node stop " + nodeName).split(" "));
 
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
             verify(nodeMgr).stopWait(nodeName, ignitePaths.cliPidsDir());
-            assertEquals(
+            assertOutputEqual(
                     "Stopping locally running node with consistent ID "
                             + cmd.getColorScheme().parameterText(nodeName)
                             + cmd.getColorScheme().text("... @|bold,green Done!|@\n"),
-                    out.toString());
+                    out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -388,17 +409,18 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError())
                     .thenReturn(ignitePaths);
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute(("node stop " + nodeName).split(" "));
 
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
             verify(nodeMgr).stopWait(nodeName, ignitePaths.cliPidsDir());
-            assertEquals(
+            assertOutputEqual(
                     "Stopping locally running node with consistent ID "
                             + cmd.getColorScheme().parameterText(nodeName)
                             + cmd.getColorScheme().text("... @|bold,red Failed|@\n"),
-                    out.toString());
+                    out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -413,13 +435,13 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError())
                     .thenReturn(ignitePaths);
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute("node list".split(" "));
 
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
             verify(nodeMgr).getRunningNodes(ignitePaths.logDir, ignitePaths.cliPidsDir());
-            assertEquals(cmd.getColorScheme().text("Number of running nodes: @|bold 2|@\n\n")
+            assertOutputEqual(cmd.getColorScheme().text("Number of running nodes: @|bold 2|@\n\n")
                             + "+---------------+-----+----------+\n"
                             + cmd.getColorScheme().text("| @|bold Consistent ID|@ | @|bold PID|@ | @|bold Log File|@ |\n")
                             + "+---------------+-----+----------+\n"
@@ -427,7 +449,8 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
                             + "+---------------+-----+----------+\n"
                             + "| new2          | 2   | logFile2 |\n"
                             + "+---------------+-----+----------+\n",
-                    out.toString());
+                    out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -439,15 +462,16 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             when(cliPathsCfgLdr.loadIgnitePathsOrThrowError())
                     .thenReturn(ignitePaths);
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute("node list".split(" "));
 
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
             verify(nodeMgr).getRunningNodes(ignitePaths.logDir, ignitePaths.cliPidsDir());
-            assertEquals("Currently, there are no locally running nodes.\n\n"
+            assertOutputEqual("Currently, there are no locally running nodes.\n\n"
                             + "Use the " + cmd.getColorScheme().commandText("ignite node start") + " command to start a new node.\n",
-                    out.toString());
+                    out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         @Test
@@ -455,15 +479,16 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
         void classpath() throws IOException {
             when(nodeMgr.classpathItems()).thenReturn(Arrays.asList("item1", "item2"));
 
-            var cmd = cmd(ctx);
-            var exitCode = cmd.execute("node classpath".split(" "));
+            CommandLine cmd = cmd(ctx);
+            int exitCode = cmd.execute("node classpath".split(" "));
 
-            Assertions.assertEquals(0, exitCode);
+            assertThatExitCodeMeansSuccess(exitCode);
             verify(nodeMgr).classpathItems();
-            assertEquals(
+            assertOutputEqual(
                     cmd.getColorScheme().text(
                             "@|bold Current Ignite node classpath:|@\n    item1\n    item2\n").toString(),
-                    out.toString());
+                    out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
     }
 
@@ -494,21 +519,26 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             when(res.body()).thenReturn("{\"baseline\":{\"autoAdjust\":{\"enabled\":true}}}");
             when(httpClient.<String>send(any(), any())).thenReturn(res);
 
-            var exitCode =
+            int exitCode =
                     cmd(ctx).execute("config get --node-endpoint localhost:8081 --type node".split(" "));
 
-            Assertions.assertEquals(0, exitCode);
-            verify(httpClient).send(
-                    argThat(r -> "http://localhost:8081/management/v1/configuration/node/".equals(r.uri().toString())
-                            && "application/json".equals(r.headers().firstValue("Content-Type").get())),
-                    any());
-            assertEquals("{\n"
+            assertThatExitCodeMeansSuccess(exitCode);
+
+            verify(httpClient).send(requestCaptor.capture(), any());
+            HttpRequest capturedRequest = requestCaptor.getValue();
+
+            assertThat(capturedRequest.uri().toString(), is("http://localhost:8081/management/v1/configuration/node/"));
+            assertThat(capturedRequest.method(), is("GET"));
+            assertThat(capturedRequest.headers().firstValue("Content-Type"), isPresentAnd(is("application/json")));
+
+            assertOutputEqual("{\n"
                     + "  \"baseline\" : {\n"
                     + "    \"autoAdjust\" : {\n"
                     + "      \"enabled\" : true\n"
                     + "    }\n"
                     + "  }\n"
-                    + "}\n", out.toString());
+                    + "}\n", out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         //TODO: Fix in https://issues.apache.org/jira/browse/IGNITE-15306
@@ -519,21 +549,25 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
             when(res.body()).thenReturn("{\"autoAdjust\":{\"enabled\":true}}");
             when(httpClient.<String>send(any(), any())).thenReturn(res);
 
-            var exitCode =
+            int exitCode =
                     cmd(ctx).execute(("config get --node-endpoint localhost:8081 "
                             + "--selector local.baseline --type node").split(" "));
 
-            Assertions.assertEquals(0, exitCode);
-            verify(httpClient).send(
-                    argThat(r ->
-                            "http://localhost:8081/management/v1/configuration/node/local.baseline".equals(r.uri().toString())
-                                    && "application/json".equals(r.headers().firstValue("Content-Type").get())),
-                    any());
-            assertEquals("{\n"
+            assertThatExitCodeMeansSuccess(exitCode);
+
+            verify(httpClient).send(requestCaptor.capture(), any());
+            HttpRequest capturedRequest = requestCaptor.getValue();
+
+            assertThat(capturedRequest.uri().toString(), is("http://localhost:8081/management/v1/configuration/node/local.baseline"));
+            assertThat(capturedRequest.method(), is("GET"));
+            assertThat(capturedRequest.headers().firstValue("Content-Type"), isPresentAnd(is("application/json")));
+
+            assertOutputEqual("{\n"
                     + "  \"autoAdjust\" : {\n"
                     + "    \"enabled\" : true\n"
                     + "  }\n"
-                    + "}\n", out.toString());
+                    + "}\n", out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         //TODO: Fix in https://issues.apache.org/jira/browse/IGNITE-15306
@@ -545,22 +579,26 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
 
             var expSentContent = "{\"local\":{\"baseline\":{\"autoAdjust\":{\"enabled\":true}}}}";
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute(("config set --node-endpoint localhost:8081 "
                             + "local.baseline.autoAdjust.enabled=true --type node"
                     ).split(" "));
 
-            Assertions.assertEquals(0, exitCode);
-            verify(httpClient).send(
-                    argThat(r -> "http://localhost:8081/management/v1/configuration/node/".equals(r.uri().toString())
-                            && "PATCH".equals(r.method())
-                            && r.bodyPublisher().get().contentLength() == expSentContent.getBytes(UTF_8).length
-                            && "application/json".equals(r.headers().firstValue("Content-Type").get())),
-                    any());
-            assertEquals("Configuration was updated successfully.\n\n"
+            assertThatExitCodeMeansSuccess(exitCode);
+
+            verify(httpClient).send(requestCaptor.capture(), any());
+            HttpRequest capturedRequest = requestCaptor.getValue();
+
+            assertThat(capturedRequest.uri().toString(), is("http://localhost:8081/management/v1/configuration/node/"));
+            assertThat(capturedRequest.method(), is("PATCH"));
+            assertThat(requestBodyBytes(capturedRequest), is(expSentContent.getBytes(UTF_8)));
+            assertThat(capturedRequest.headers().firstValue("Content-Type"), isPresentAnd(is("application/json")));
+
+            assertOutputEqual("Configuration was updated successfully.\n\n"
                     + "Use the " + cmd.getColorScheme().commandText("ignite config get")
-                    + " command to view the updated configuration.\n", out.toString());
+                    + " command to view the updated configuration.\n", out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
 
         //TODO: Fix in https://issues.apache.org/jira/browse/IGNITE-15306
@@ -575,23 +613,212 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
 
             var expSentContent = "{\"local\":{\"baseline\":{\"autoAdjust\":{\"enabled\":true}}}}";
 
-            var cmd = cmd(ctx);
-            var exitCode =
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
                     cmd.execute(("config set --node-endpoint localhost:8081 "
                             + "local.baseline.autoAdjust.enabled=true --type node"
                     ).split(" "));
 
-            Assertions.assertEquals(0, exitCode);
-            verify(httpClient).send(
-                    argThat(r -> "http://localhost:8081/management/v1/configuration/node/".equals(r.uri().toString())
-                            && "PATCH".equals(r.method())
-                            && r.bodyPublisher().get().contentLength() == expSentContent.getBytes(UTF_8).length
-                            && "application/json".equals(r.headers().firstValue("Content-Type").get())),
-                    any());
-            assertEquals("Configuration was updated successfully.\n\n"
+            assertThatExitCodeMeansSuccess(exitCode);
+
+            verify(httpClient).send(requestCaptor.capture(), any());
+            HttpRequest capturedRequest = requestCaptor.getValue();
+
+            assertThat(capturedRequest.uri().toString(), is("http://localhost:8081/management/v1/configuration/node/"));
+            assertThat(capturedRequest.method(), is("PATCH"));
+            assertThat(requestBodyBytes(capturedRequest), is(expSentContent.getBytes(UTF_8)));
+            assertThat(capturedRequest.headers().firstValue("Content-Type"), isPresentAnd(is("application/json")));
+
+            assertOutputEqual("Configuration was updated successfully.\n\n"
                     + "Use the " + cmd.getColorScheme().commandText("ignite config get")
-                    + " command to view the updated configuration.\n", out.toString());
+                    + " command to view the updated configuration.\n", out.toString(UTF_8));
+            assertThatStderrIsEmpty();
         }
+    }
+
+    /**
+     * Tests "cluster" command.
+     */
+    @Nested
+    @DisplayName("cluster")
+    class Cluster {
+        @Mock
+        private HttpClient httpClient;
+
+        @Mock
+        private HttpResponse<String> response;
+
+        @BeforeEach
+        void setUp() {
+            ctx.registerSingleton(httpClient);
+        }
+
+        @Test
+        @DisplayName("init --node-endpoint=127.0.0.1:17300 --meta-storage-node node1ConsistentId --meta-storage-node node2ConsistentId "
+                + "--cmg-node node2ConsistentId --cmg-node node3ConsistentId")
+        void initSuccess() throws Exception {
+            when(response.statusCode()).thenReturn(HttpURLConnection.HTTP_OK);
+            when(httpClient.<String>send(any(), any())).thenReturn(response);
+
+            var expSentContent = "{\"metastorageNodes\":[\"node1ConsistentId\",\"node2ConsistentId\"],"
+                    + "\"cmgNodes\":[\"node2ConsistentId\",\"node3ConsistentId\"]}";
+
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
+                    cmd.execute("cluster", "init", "--node-endpoint=127.0.0.1:8081",
+                            "--meta-storage-node", "node1ConsistentId", "--meta-storage-node", "node2ConsistentId",
+                            "--cmg-node", "node2ConsistentId", "--cmg-node", "node3ConsistentId"
+                    );
+
+            assertThatExitCodeMeansSuccess(exitCode);
+
+            verify(httpClient).send(requestCaptor.capture(), any());
+            HttpRequest capturedRequest = requestCaptor.getValue();
+
+            assertThat(capturedRequest.uri().toString(), is("http://127.0.0.1:8081/management/v1/cluster/init/"));
+            assertThat(capturedRequest.method(), is("POST"));
+            assertThat(requestBodyBytes(capturedRequest), is(expSentContent.getBytes(UTF_8)));
+            assertThat(capturedRequest.headers().firstValue("Content-Type"), isPresentAnd(is("application/json")));
+
+            assertThat(out.toString(UTF_8), is(platformizeNewLines("Cluster was initialized successfully.\n")));
+            assertThatStderrIsEmpty();
+        }
+
+        @Test
+        void initErrorWithWellFormedJsonResponseDisplaysPrettifiedJson() throws Exception {
+            when(response.statusCode()).thenReturn(HttpURLConnection.HTTP_INTERNAL_ERROR);
+            when(response.body()).thenReturn("{\"error\":{\"type\":\"INTERNAL_ERROR\",\"message\":\"Cannot elect leaders\"}}");
+            when(httpClient.<String>send(any(), any())).thenReturn(response);
+
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
+                    cmd.execute("cluster", "init", "--node-endpoint=127.0.0.1:8081",
+                            "--meta-storage-node", "node1ConsistentId", "--meta-storage-node", "node2ConsistentId",
+                            "--cmg-node", "node2ConsistentId", "--cmg-node", "node3ConsistentId"
+                    );
+
+            assertThatExitCodeIs(1, exitCode);
+
+            assertThatStdoutIsEmpty();
+            assertThat(err.toString(UTF_8), startsWith(platformizeNewLines(
+                    "org.apache.ignite.cli.IgniteCliException: Failed to initialize cluster\n"
+                            + "\n"
+                            + "{\n"
+                            + "  \"error\" : {\n"
+                            + "    \"type\" : \"INTERNAL_ERROR\",\n"
+                            + "    \"message\" : \"Cannot elect leaders\"\n"
+                            + "  }\n"
+                            + "}")));
+        }
+
+        @Test
+        void initErrorWithNonJsonResponse() throws Exception {
+            when(response.statusCode()).thenReturn(HttpURLConnection.HTTP_INTERNAL_ERROR);
+            when(response.body()).thenReturn("Oops");
+            when(httpClient.<String>send(any(), any())).thenReturn(response);
+
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
+                    cmd.execute("cluster", "init", "--node-endpoint=127.0.0.1:8081",
+                            "--meta-storage-node", "node1ConsistentId", "--meta-storage-node", "node2ConsistentId",
+                            "--cmg-node", "node2ConsistentId", "--cmg-node", "node3ConsistentId"
+                    );
+
+            assertThatExitCodeIs(1, exitCode);
+
+            assertThatStdoutIsEmpty();
+            assertThat(err.toString(UTF_8), startsWith(platformizeNewLines(
+                    "org.apache.ignite.cli.IgniteCliException: Failed to initialize cluster\n"
+                            + "\n"
+                            + "Oops")));
+        }
+
+        @Test
+        @DisplayName("init --meta-storage-node node1ConsistentId --meta-storage-node node2ConsistentId "
+                + "--cmg-node node2ConsistentId --cmg-node node3ConsistentId")
+        void nodeEndpointIsMandatoryForInit() {
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
+                    cmd.execute("cluster", "init",
+                            "--meta-storage-node", "node1ConsistentId", "--meta-storage-node", "node2ConsistentId",
+                            "--cmg-node", "node2ConsistentId", "--cmg-node", "node3ConsistentId"
+                    );
+
+            assertThatExitCodeIs(2, exitCode);
+
+            assertThatStdoutIsEmpty();
+            assertThat(err.toString(UTF_8), startsWith("Missing required option: '--node-endpoint=<nodeEndpoint>'"));
+        }
+
+        @Test
+        @DisplayName("init --node-endpoint=127.0.0.1:17300 --cmg-node node2ConsistentId --cmg-node node3ConsistentId")
+        void metastorageNodesAreMandatoryForInit() {
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
+                    cmd.execute("cluster", "init", "--node-endpoint=127.0.0.1:8081",
+                            "--cmg-node", "node2ConsistentId", "--cmg-node", "node3ConsistentId"
+                    );
+
+            assertThatExitCodeIs(2, exitCode);
+
+            assertThatStdoutIsEmpty();
+            assertThat(err.toString(UTF_8), startsWith("Missing required option: '--meta-storage-node=<metastorageNodes>'"));
+        }
+
+        @Test
+        @DisplayName("init --node-endpoint=127.0.0.1:17300 --meta-storage-node node2ConsistentId --meta-storage-node node3ConsistentId")
+        void cmgNodesAreNotMandatoryForInit() throws Exception {
+            when(response.statusCode()).thenReturn(HttpURLConnection.HTTP_OK);
+            when(httpClient.<String>send(any(), any())).thenReturn(response);
+
+            CommandLine cmd = cmd(ctx);
+            int exitCode =
+                    cmd.execute("cluster", "init", "--node-endpoint=127.0.0.1:8081",
+                            "--meta-storage-node", "node1ConsistentId", "--meta-storage-node", "node2ConsistentId"
+                    );
+
+            assertThatExitCodeMeansSuccess(exitCode);
+
+            assertThat(out.toString(UTF_8), is(platformizeNewLines("Cluster was initialized successfully.\n")));
+            assertThatStderrIsEmpty();
+        }
+    }
+
+    private String platformizeNewLines(String str) {
+        return str.replace("\n", System.lineSeparator());
+    }
+
+    private void assertThatStdoutIsEmpty() {
+        assertThat(out.toString(UTF_8), is(""));
+    }
+
+    private void assertThatStderrIsEmpty() {
+        assertThat(err.toString(UTF_8), is(""));
+    }
+
+    private void assertThatExitCodeMeansSuccess(int exitCode) {
+        assertThatExitCodeIs(0, exitCode);
+    }
+
+    private void assertThatExitCodeIs(int expectedCode, int exitCode) {
+        assertEquals(expectedCode, exitCode, outputStreams());
+    }
+
+    private String outputStreams() {
+        return "stdout:\n" + out.toString(UTF_8) + "\n" + "stderr:\n" + err.toString(UTF_8);
+    }
+
+    private byte[] requestBodyBytes(HttpRequest capturedRequest) {
+        assertTrue(capturedRequest.bodyPublisher().isPresent());
+
+        BodyPublisher jdkBodyPublisher = capturedRequest.bodyPublisher().get();
+        ByteBuffer requestBodyBuffer = JdkFlowAdapter.flowPublisherToFlux(jdkBodyPublisher).blockFirst();
+        assertThat(requestBodyBuffer, is(notNullValue()));
+
+        byte[] bytes = new byte[requestBodyBuffer.remaining()];
+        requestBodyBuffer.get(bytes);
+
+        return bytes;
     }
 
     /**
@@ -603,10 +830,10 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
      * @param actual Actual result.
      * @see Object#equals(Object)
      */
-    private static void assertEquals(String exp, String actual) {
-        Assertions.assertEquals(
-                exp.lines().collect(Collectors.toList()),
-                actual.lines().collect(Collectors.toList())
+    private static void assertOutputEqual(String exp, String actual) {
+        assertEquals(
+                exp.lines().collect(toList()),
+                actual.lines().collect(toList())
         );
     }
 }
